[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/vehicles/eternal_bond_front.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/sounds/vehicles/sci-fi_vehicle_spaceship_jet_engine_loop3.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/materials/vehicles/eternal_bond.material" type="Material" id=6]
[ext_resource path="res://resources/materials/vehicles/eb_wheel.material" type="Material" id=7]
[ext_resource path="res://resources/sounds/destruction/explosion_large_06.wav" type="AudioStream" id=8]
[ext_resource path="res://resources/meshes/vehicles/wheel_1.tres" type="ArrayMesh" id=9]
[ext_resource path="res://resources/meshes/vehicles/eternal_bond_front.tres" type="ArrayMesh" id=10]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/sounds/vehicles/tyre_skid_loop_01.wav" type="AudioStream" id=14]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_02.wav" type="AudioStream" id=15]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=16]
[ext_resource path="res://resources/sounds/vehicles/car_window_open_close_whir_04.wav" type="AudioStream" id=17]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=18]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/particles/rocket_flame.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/particles/rocket_flame_cpu.tscn" type="PackedScene" id=21]
[ext_resource path="res://resources/materials/destruction/death_explosion.material" type="Material" id=22]
[ext_resource path="res://resources/fonts/PixeloidMono.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://scripts/cameras_&_ui/score_label.gd" type="Script" id=24]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.865, 0.64, 2.368, -0.865, 0.64, 2.368, 0.828, 1.36, -0.038, -0.828, 1.36, -0.038, 0.828, 1.36, -2.5, -0.828, 1.36, -2.5, 0.918, 0.09, 2.49, -0.918, 0.09, 2.49, 0.97, -0.002, 2.163, -0.97, -0.002, 2.163, 0.97, -0.002, -2.5, -0.97, -0.002, -2.5 )

[sub_resource type="QuadMesh" id=15]
resource_local_to_scene = true

[sub_resource type="DynamicFont" id=19]
size = 9
font_data = ExtResource( 23 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.321569, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/ExplosionMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/ExplosionMesh:mesh:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.105112, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/ExplosionMesh:material/0:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.490196, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
visible = false
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183, 0 )
collision_layer = 0
collision_mask = 0
mass = 163.265
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_health = 75.0
base_engine_force = 140.8
base_boost_type = 1
nitro_force = 0.0
rocket_force = 73.6
burst_force = 0.0
master_body = false
scene_resource = "res://scenes/vehicles/eternal_bond.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.160011, 1.722 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontLeft"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )
script = ExtResource( 16 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelFrontLeft/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.160011, 1.722 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelFrontRight"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )
script = ExtResource( 16 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelFrontRight/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.160011, -1.632 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackLeft"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )
script = ExtResource( 16 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelBackLeft/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.160011, -1.632 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.36
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Mesh" type="MeshInstance" parent="Body/WheelBackRight"]
pause_mode = 2
physics_interpolation_mode = 1
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
portal_mode = 3
mesh = ExtResource( 9 )
material/0 = ExtResource( 7 )
script = ExtResource( 16 )
required_setting = 4

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Body/WheelBackRight/Mesh"]
aabb = AABB( -0.361, -0.126, -0.361, 0.722, 0.252, 0.722 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )
shape = SubResource( 6 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, -2.5 )
portal_mode = 3
mesh = ExtResource( 10 )
material/0 = ExtResource( 6 )
script = ExtResource( 18 )
required_setting = 2

[node name="ShotPositionLeft" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.499, 0.262, 2.498 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.499493, 0.262, 2.49801 )
enabled = true
cast_to = Vector3( 0, 0, 70 )

[node name="CartridgeExitLeft" type="Position3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.961467, 0.663603, 1.18968 )

[node name="CartridgeExitRight" type="Position3D" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74227e-08, 0, -1, -0.961, 0.664011, 1.19 )

[node name="ExplosionMesh" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.765481, 2.5 )
visible = false
portal_mode = 3
cast_shadow = 0
mesh = SubResource( 15 )
material/0 = ExtResource( 22 )

[node name="ScoreLabel" type="Label3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
portal_mode = 3
pixel_size = 0.003
billboard = 1
double_sided = false
fixed_size = true
font = SubResource( 19 )
script = ExtResource( 24 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826326, 1.528 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826326, 1.528 )

[node name="MuzzleFlashMGLeft" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.499, 0.202011, 2.498 )

[node name="MuzzleFlashMGRight" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.499, 0.202011, 2.498 )

[node name="MuzzleFlashShotgunFrontLeft" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.948, 0.517, 0.893 )
one_shot = true

[node name="MuzzleFlashShotgunFrontRight" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.948, 0.517, 0.893 )
one_shot = true

[node name="MuzzleFlashShotgunBackLeft" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.948, 0.517, -0.968 )
one_shot = true

[node name="MuzzleFlashShotgunBackRight" parent="Body" instance=ExtResource( 2 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.948, 0.517, -0.968 )
one_shot = true

[node name="CPUMuzzleFlashMGLeft" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.499, 0.202011, 2.498 )

[node name="CPUMuzzleFlashMGRight" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.499, 0.202011, 2.498 )

[node name="CPUMuzzleFlashShotgunFrontLeft" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948, 0.517, 0.893 )
one_shot = true

[node name="CPUMuzzleFlashShotgunFrontRight" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.948, 0.517, 0.893 )
one_shot = true

[node name="CPUMuzzleFlashShotgunBackLeft" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.948, 0.517, -0.97 )
one_shot = true

[node name="CPUMuzzleFlashShotgunBackRight" parent="Body" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.948, 0.517, -0.97 )
one_shot = true

[node name="DriftParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.634 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.634 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.16, -1.634 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.16, -1.634 )

[node name="RocketParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="Particles" parent="Body/RocketParticles" instance=ExtResource( 20 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.722921, -2.59606 )

[node name="RocketCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="CPUParticles" parent="Body/RocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.723, -2.596 )

[node name="ReverseRocketParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="Left" parent="Body/ReverseRocketParticles" instance=ExtResource( 20 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.721, 0.248, 2.534 )

[node name="Right" parent="Body/ReverseRocketParticles" instance=ExtResource( 20 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.72132, 0.247823, 2.53404 )

[node name="ReverseRocketCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09971e-05, 0 )

[node name="Left" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0.721, 0.248, 2.534 )

[node name="Right" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 21 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -0.72132, 0.247823, 2.53404 )

[node name="ShotgunPositionFrontLeft" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.948354, 0.517204, 0.893 )

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionFrontLeft"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionFrontRight" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.948, 0.517, 0.893 )

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionFrontRight"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionBackLeft" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.948354, 0.517204, -0.968 )

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionBackLeft"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotgunPositionBackRight" type="Spatial" parent="Body"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.948, 0.517, -0.968 )

[node name="ShotPositionUp" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, 0.104528, 0, -0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionDown" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 1, 0, 0, 0, 0.994522, -0.104528, 0, 0.104528, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionLeft" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.994522, 0, 0.104528, 0, 1, 0, -0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMiddle" type="RayCast" parent="Body/ShotgunPositionBackRight"]
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionRight" type="RayCast" parent="Body/ShotgunPositionBackRight"]
transform = Transform( 0.994522, 0, -0.104528, 0, 1, 0, 0.104528, 0, 0.994522, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="AcidParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.744903, 0 )

[node name="Particles" parent="Body/AcidParticles" instance=ExtResource( 19 )]

[node name="SplitAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 17 )
unit_size = 3.0
bus = "Effects"

[node name="DeathAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 8 )
unit_size = 4.0
bus = "Effects"

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.592, 4.208 )
stream = ExtResource( 15 )
unit_size = 0.4
autoplay = true
bus = "Effects"

[node name="DriftAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
stream = ExtResource( 14 )
unit_size = 0.4
autoplay = true
stream_paused = true
bus = "Effects"

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743316, -2.50047 )
stream = ExtResource( 5 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="ReverseRocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.246, 2.493 )
stream = ExtResource( 5 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/death = SubResource( 16 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="MachineGunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="ShotgunTimerLeft" type="Timer" parent="."]
process_mode = 0
wait_time = 0.7
one_shot = true

[node name="ShotgunTimerRight" type="Timer" parent="."]
process_mode = 0
wait_time = 0.7
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="MachineGunTimer" to="Body" method="_on_MachineGunTimer_timeout"]
[connection signal="timeout" from="ShotgunTimerLeft" to="Body" method="_on_ShotgunTimerLeft_timeout"]
[connection signal="timeout" from="ShotgunTimerRight" to="Body" method="_on_ShotgunTimerRight_timeout"]
